# hs-tags

./: .gitignore  CHANGELOG.md  LICENSE  Main.hs  Makefile  README.md  cabal.haskell-ci  hTags.cabal  hs-tags.cabal  stack-8.10.6.yaml
.github/workflows/: haskell-ci.yml
attic/: README.md
